iptables
*mangle
:PREROUTING ACCEPT
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT
:POSTROUTING ACCEPT
-A PREROUTING -s 192.168.40.159 -j RETURN
-A PREROUTING -s 192.168.40.170 -j RETURN
-A PREROUTING -s 192.168.40.171 -j RETURN
-A PREROUTING -s 192.168.40.142 -j RETURN
-A PREROUTING -d 192.168.40.159 -j RETURN
-A PREROUTING -d 192.168.40.170 -j RETURN
-A PREROUTING -d 192.168.40.171 -j RETURN
-A PREROUTING -d 192.168.40.142 -j RETURN
-A PREROUTING ! -i eth1 -j MARK --set-mark 1
COMMIT

*nat
:PREROUTING ACCEPT
:POSTROUTING ACCEPT
:OUTPUT ACCEPT
-N goodwin_prerouting
-N goodwin_postrouting

-A POSTROUTING -o eth1 -j SNAT --to-source 93.188.208.76

-A PREROUTING -j goodwin_prerouting
-A POSTROUTING -j goodwin_postrouting
COMMIT

*filter
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT
-A INPUT -i eth1 -j DROP
-A FORWARD -i eth0 -s 192.168.40.152 -j ACCEPT
-A FORWARD -i eth0 -s 192.168.40.190 -j ACCEPT
-A FORWARD -i eth0 -s 192.168.40.177 -j ACCEPT
-A FORWARD -i eth0 -s 192.168.40.159 -j ACCEPT
-A FORWARD -i eth0 -s 192.168.40.170 -j ACCEPT
-A FORWARD -i eth0 -s 192.168.40.171 -j ACCEPT
-A FORWARD -i eth0 -s 192.168.40.142 -j ACCEPT
-A FORWARD -i eth0 -j DROP
-A FORWARD -i eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT 

-A FORWARD -i eth1 -j REJECT --reject-with icmp-port-unreachable 
COMMIT
